After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629160 - Don't error out on truncated chunk-encoding transfers
Don't error out on truncated chunk-encoding transfers
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-09-09 12:47 UTC by Bastien Nocera
Modified: 2010-11-09 18:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2010-09-09 12:47:10 UTC
libsoup-2.30.1-1.fc13.x86_64

As discussed in private mail.

When using chunk-encoding, and the transfer does not end with a 0-length chunk. ("0\r\n".), libsoup assumesthat the connection was closed before the server finished sending the response. (Which is technically the correct behavior.)

Firefox, Safari and wget just ignore the error.