soup-message-io: deal with stupid servers that do chunked encoding wrong

Some servers fail to send the final 0-length chunk when allegedly doing
chunked encoding. Browsers cope. Now we do too.

https://bugzilla.gnome.org/show_bug.cgi?id=629160