libsoup/soup-message-io.c
@@ -309,8 +309,26 @@ read_metadata (SoupMessage *msg, gboolean to_blank)
 			g_byte_array_append (io->read_meta_buf, read_buf, nread);
 			break;
 
-		case SOUP_SOCKET_ERROR:
 		case SOUP_SOCKET_EOF:
+			/* More lame server handling... deal with
+			 * servers that don't send the final chunk.
+			 */
+			if (io->read_state == SOUP_MESSAGE_IO_STATE_CHUNK_SIZE &&
+			    io->read_meta_buf->len == 0) {
+				g_byte_array_append (io->read_meta_buf,
+						     (guchar *)"0\r\n", 3);
+				got_lf = TRUE;
+				break;
+			} else if (io->read_state == SOUP_MESSAGE_IO_STATE_TRAILERS &&
+				   io->read_meta_buf->len == 0) {
+				g_byte_array_append (io->read_meta_buf,
+						     (guchar *)"\r\n", 2);
+				got_lf = TRUE;
+				break;
+			}
+			/* else fall through */
+
+		case SOUP_SOCKET_ERROR:
 			io_error (io->sock, msg, error);
 			return FALSE;
 
